--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+graph = "0.3.1"
 itertools = "0.12.0"
 pathfinding = "4.6.0"
 regex = "1.10.2"
